# ExecutionGraph

./: .clang-format  .cmake-format.yaml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  ExecutionGraphRegexes  README.md  Test.sh  clang-formatAll.sh  configure.sh  package-lock.json
benchmarks/: CMakeLists.txt
benchmarks/include/: BenchmarkConfig.hpp.in.cmake  BenchmarkFunctions.hpp
benchmarks/src/: BenchmarkFunctions.cpp  main-delegates.cpp  main_delegates.cpp
examples/libraryUsage/: CMakeLists.txt  main.cpp
gui/: CMakeLists.txt
gui/cefsimple/: CMakeLists.txt  cefsimple_mac.mm  process_helper_mac.cpp  simple_app.cc  simple_app.cpp  simple_app.hpp  simple_handler.cc  simple_handler.cpp  simple_handler.hpp  simple_handler_mac.mm
gui/cefsimple/cmake/: cef_variables.cmake
gui/cefsimple/mac/: Info.plist  helper-Info.plist
gui/client/: .angular-cli.json  index.html  package-lock.json  package.json  tslint.json
gui/client/e2e/: app.e2e-spec.ts
gui/client/src/: index.html
gui/cmake/: FindCEF.cmake  cef_macros.cmake  cef_variables.cmake
gui/executionGraphGUI/: CMakeLists.txt
gui/executionGraphGUI/backend/: Backend.hpp  BackendFactory.cpp  BackendFactory.hpp  BackendRequestHandler.cpp  BackendRequestHandler.hpp  ExecutionGraphBackend.cpp  ExecutionGraphBackend.hpp  ExecutionGraphBackendDefs.hpp
gui/executionGraphGUI/cefapp/: App.cpp  AppCLArgs.cpp  AppCLArgs.hpp  AppHandler.cpp  AppHandler.hpp  BackendRequestDispatcher.hpp  BackendRequestDispatcherAdapterCef.hpp  BackendResourceHandler.cpp  BackendResourceHandler.hpp  BackendSchemeHandlerFactory.cpp  BackendSchemeHandlerFactory.hpp  ClientSchemeHandlerFactory.cpp  ClientSchemeHandlerFactory.hpp  PlatformTitleChanger.hpp  RendererApp.hpp  RequestCef.hpp  ResponseCef.hpp  SchemeHandlerHelper.cpp  SchemeHandlerHelper.hpp
gui/executionGraphGUI/client/: .angular-cli.json  CMakeLists.txt  angular.json  nx.json  package-lock.json  package.json  tsconfig.json  tslint.json
gui/executionGraphGUI/common/: AllocatorProxyFlatBuffer.hpp  Assert.hpp  BinaryBuffer.hpp  BinaryPayload.hpp  BufferPool.hpp  DevFlags.hpp  Exception.hpp  FunctionMap.hpp  Loggers.cpp  Loggers.hpp  Request.hpp  RequestDispatcher.hpp  RequestError.hpp  Response.hpp
gui/executionGraphGui/: CMakeLists.txt  Specs.md
gui/executionGraphGui/backend/: Backend.hpp  BackendFactory.cpp  BackendFactory.hpp  BackendMessageHandler.cpp  BackendMessageHandler.hpp  BackendMessageHandlerFactory.cpp  BackendMessageHandlerFactory.hpp  BackendRequestDispatcher.hpp  BackendRequestHandler.cpp  BackendRequestHandler.hpp  BackendStorage.cpp  BackendStorage.hpp  CMakeLists.txt  DummyBackendMsgHandler.cpp  DummyBackendMsgHandler.hpp  DummyBackendRequestHandler.cpp  DummyBackendRequestHandler.hpp  ExecutionGraphBackend.cpp  ExecutionGraphBackend.hpp  ExecutionGraphBackendDefs.cpp  ExecutionGraphBackendDefs.hpp  IBackend.hpp  Test.cpp
gui/executionGraphGui/cefapp/: App.cpp  App.hpp  AppCLArgs.cpp  AppCLArgs.hpp  AppHandler.cpp  AppHandler.hpp  BackendRequestDispatcher.hpp  BackendRequestDispatcherAdapterCef.hpp  BackendResourceHandler.cpp  BackendResourceHandler.hpp  BackendSchemeHandlerFactory.cpp  BackendSchemeHandlerFactory.hpp  BinaryBuffer.hpp  BinaryBufferView.hpp  BinaryPayload.hpp  BufferPool.hpp  CMakeLists.txt  ClientSchemeHandlerFactory.cpp  ClientSchemeHandlerFactory.hpp  FileSchemeHandlerFactory.cpp  FileSchemeHandlerFactory.hpp  Handler.cpp  Handler.hpp  IRequest.hpp  IResponse.hpp  Loggers.cpp  Loggers.hpp  MessageDispatcher.hpp  MessageHandler.cpp  MessageHandler.hpp  PathHelpers.cpp  PlatformTitleChanger.hpp  RendererApp.cpp  RendererApp.hpp  Request.hpp  RequestCef.hpp  RequestDispatcher.hpp  ResourceHandlerPool.hpp  Response.hpp  ResponseCef.hpp  (+3 more)
gui/executionGraphGui/client/: .angular-cli.json  .gitignore  .prettierignore  CMakeLists.txt  README.md  angular.json  nx.json  package-lock.json  package.json  protractor.conf.js  proxy.conf.json  tsconfig.json  tsconfig.spec.json  tslint.json
gui/executionGraphGui/common/: AllocatorProxyFlatBuffer.hpp  Assert.hpp  BinaryBuffer.hpp  BinaryPayload.hpp  BufferPool.hpp  CMakeLists.txt  CommandLineArguments.cpp  CommandLineArguments.hpp  DevFlags.hpp  Exception.hpp  FunctionMap.hpp  IObjectID.hpp  Loggers.cpp  Loggers.hpp  Request.hpp  RequestDispatcher.hpp  RequestError.hpp  Response.hpp
gui/executionGraphGui/rpc/: ExecutionGraphBackend.fbs
gui/executionGraphGui/server/: AsioTricks.md  BackendRequest.hpp  BackendRequestDispatcher.hpp  BackendResponse.hpp  BinaryBufferBody.hpp  CMakeLists.txt  HttpCommon.cpp  HttpCommon.hpp  HttpFailure.hpp  HttpFieldAllocator.hpp  HttpListener.cpp  HttpListener.hpp  HttpSession.cpp  HttpSession.hpp  HttpWorker.cpp  HttpWorker.hpp  MimeType.cpp  MimeType.hpp  ServerCLArgs.cpp  ServerCLArgs.hpp  main.cpp
gui/jsPlumbTest/: draggable.js  graph.js  index.html  package.json  style.css
gui/specs/: Specs.md  ajax-backend-comm.plantuml  client-backend.plantuml  request-response.plantuml
gui/testDebugger/: .gitignore  build.sh  runExecutionGraph.sh
gui/tests/: CMakeLists.txt
lib/: CMakeLists.txt  executiongraph-config-version.cmake.in  executiongraph-config.cmake.in
lib/cmake/: executiongraph-config-dependencies.cmake
tests/: CMakeLists.txt
tests/files/: testbuffer.fbs  testbuffer_generated.h
tests/include/: DummyNode.hpp  GraphGenerator.hpp  TestConfig.hpp.in.cmake  TestFunctions.hpp
tests/scripts/: noCompile.sh
tests/src/: TestFunctions.cpp  main-AnyInvocable.cpp  main-ConstExpr.cpp  main-CustomSocketTypes.cpp  main-ExecutionTree.cpp  main-Factory.cpp  main-Flags.cpp  main-LogicNode.cpp  main-LogicSocketData.cpp  main-MemoryPool.cpp  main-MetaProgramming.cpp  main-Synchronized.cpp  main-TaskQueue.cpp  main_ConstExpr.cpp  main_CustomSocketTypes.cpp  main_ExecutionTree.cpp  main_Factory.cpp  main_Flags.cpp  main_Flatbuffer.cpp  main_Json.cpp  main_LogicNode.cpp  main_LogicNodeData.cpp  main_LogicSocketData.cpp  main_MemoryPool.cpp  main_MetaProg.cpp  main_Synchronized.cpp  main_TaskQueue.cpp  main_delegates.cpp
(+933 files in other folders)
